--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.netdoers.zname"
-    android:versionCode="9"
+    android:versionCode="10"
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="10" />
@@ -30,6 +30,12 @@
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="com.netdoers.zname.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <permission
+        android:name="com.netdoers.zname.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
 
     <application
         android:name="com.netdoers.zname.Zname"
@@ -38,6 +44,10 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/Theme.Zname" >
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name="com.netdoers.zname.ui.IntroActivity"
             android:label="@string/app_name"
@@ -76,10 +86,9 @@
         <activity
             android:name="com.netdoers.zname.ui.CallLogsDetailsActivity"
             android:screenOrientation="portrait" />
-        <activity 
+        <activity
             android:name="com.netdoers.zname.ui.GroupContactsActivity"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.netdoers.zname.ui.AddZnameActivity"
             android:screenOrientation="portrait" />
@@ -112,6 +121,7 @@
         <service android:name="com.netdoers.zname.service.ImportContactsService" />
         <service android:name="com.netdoers.zname.service.SyncPhoneBookService" />
         <service android:name="com.netdoers.zname.service.SyncContactsService" />
+        <service android:name="com.netdoers.zname.service.SyncCallStatusService" />
         <service android:name="com.netdoers.zname.service.IncomingOutgoingPushService" />
 
         <receiver android:name="com.netdoers.zname.receiver.ReceiverInComingCall" >
@@ -124,6 +134,18 @@
                 <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
             </intent-filter>
         </receiver>
+        <receiver
+            android:name="com.netdoers.zname.receiver.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="com.netdoers.zname" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name="com.netdoers.zname.service.GcmIntentService" />
     </application>
 
 </manifest>
