--- a/project.properties
+++ b/project.properties
@@ -14,4 +14,5 @@
 target=android-17
 android.library.reference.1=..\\actionbarsherlock
 android.library.reference.2=..\\actionbarsherlock_pulltorefresh
-android.library.reference.3=../androidvolley
+android.library.reference.3=..\\androidvolley
+android.library.reference.4=../google-play-services_lib
